# lifestuff

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  wrangler.toml
.github/workflows/: rust-tests.yml
lifestuff/: Cargo.toml  README.md  build.rs
lifestuff-types/: Cargo.toml
lifestuff-types/src/: conversions.rs  currency.rs  dateinfo.rs  ddg.rs  interest.rs  lib.rs  mileage.rs  mortgage.rs
lifestuff-types/src/conversions/: area.rs  distance.rs
lifestuff-types/src/dateinfo/: add.rs  diff.rs
lifestuff-types/src/ddg/: convert.rs
lifestuff/src/: commands.rs  conversions.rs  currency.rs  dateinfo.rs  ddg.rs  http_utils.rs  interest.rs  main.rs  mileage.rs  mortgage.rs
lifestuff/src/conversions/: area.rs  area_tests.rs  distance.rs
lifestuff/src/currency/: tests.rs
lifestuff/src/dateinfo/: add.rs  common.rs  datetimekeeper.rs  diff.rs  ordinal.rs
lifestuff/src/dateinfo/datetimekeeper/: tests.rs
lifestuff/src/ddg/: convert.rs  generate.rs
lifestuff/src/interest/: tests.rs
lifestuff/src/mileage/: tests.rs
migrations/: 0001_initial.sql
src/: area.rs  conversions.rs  currency.rs  dateinfo.rs  ddg.rs  distance.rs  errors.rs  interest.rs  main.rs  mileage.rs
src/conversions/: area.rs  area_tests.rs  distance.rs
src/currency/: tests.rs
src/dateinfo/: add.rs  common.rs  datetimekeeper.rs  diff.rs  ordinal.rs
src/dateinfo/datetimekeeper/: tests.rs
src/ddg/: convert.rs
src/interest/: tests.rs
src/mileage/: tests.rs
