[package]
name = "lifestuff"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "~4", features = ["derive"] }
strum = { version = "~0.24", features = ["derive"]}
time = {version = "~0.3", features = ["macros", "formatting", "parsing"]}

