[package]
name = "lifestuff"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "~4", features = ["derive"] }
reqwest = {version = "0.11.17", features=["blocking"]}
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
strum = { version = "~0.24", features = ["derive"]}
time = {version = "~0.3", features = ["macros", "formatting", "parsing"]}

