[package]
name = "lifestuff"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "~4", features = ["derive"] }
colored = "2.1.0"
reqwest = { version = "0.12.2", features = ["blocking", "json"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
strum = { version = "0.26.2", features = ["derive"] }
time = { version = "~0.3", features = ["macros", "formatting", "parsing"] }
