[package]
name = "lifestuff-types"
version = "0.0.1"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "~4", features = ["derive"] }
strum = { version = "~0", features = ["derive"] }
time = { version = "~0.3", features = ["macros", "formatting", "parsing"] }
regex = "~1"
anyhow = "~1"
