[package]
name = "lifestuff-types"
version = "0.0.1"
edition = "2024"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }
regex = "1.10"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
