[package]
name = "lifestuff-types"
version = "0.0.1"
edition = "2024"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.6", features = ["derive"] }
strum = { version = "0.28", features = ["derive"] }
regex = "1.12"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
