[package]
name = "lifestuff"
version = "0.2.3"
edition = "2024"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
colored = "2.1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.26", features = ["derive"] }
time = { version = "0.3", features = ["macros", "formatting", "parsing"] }
regex = "1.10"
lifestuff-types = { path = "../lifestuff-types" }
clap_builder = "4.5"
url = "2.5"

[dev-dependencies]
dotenv = "0.15"
mockito = "1.6"
serial_test = "3.2"

[build-dependencies]
lifestuff-types = { path = "../lifestuff-types" }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
